--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Slot Machine with Images</title>
+    <title>Slot Machine</title>
     <style>
         body {
             display: flex;
